# final_challenge2026

./: README.md  basement_point_publisher.py  benchmark_rrt.py  package.xml  setup.cfg  setup.py
config/real/: boating_config.yaml  race_config.yaml
config/sim/: boating_config.yaml  race_config.yaml
final_challenge/: basement_point_publisher.py  color_segmentation.py  detect_lane_lines.py  homography_transformer.py  initial_pose_publisher.py  lane_detector.py  lane_evaluator.py  lane_follower.py  object_detector.py  overall_controller.py  parking_approach.py  race_safety_controller.py  rrt_planner.py  rviz_goal_publisher.py  safety_controller.py  sim_environment.py  traffic_light_detector.py  trajectory_follower.py  trajectory_planner.py  utils.py
launch/: lane_detector.launch.py
launch/real/: boating.rviz  boating_real.launch.xml  race_real.launch.xml
launch/sim/: boating_sim.launch.xml  race_sim.launch.xml
media/briefing/: SLIDE_CONTENT.md  generate_briefing_visuals.py  generate_partB_diagrams.py  run_yolo_test.py
media/briefing/parking_test/: yolo_results.csv
scripts/: analyze_bag.py  deploy.sh  diagnose.sh  race_day_start.sh  race_day_stop.sh
