<?xml version="1.0"?>
<package format="3">
    <name>final_challenge</name>
    <version>0.0.0</version>
    <description>MIT RSS Final Challenge 2026</description>

    <maintainer email="rohan.das.248@gmail.com">rohandas</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_python</buildtool_depend>

    <build_depend>racecar_simulator</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>visualization_msgs</build_depend>
    <build_depend>tf2_geometry_msgs</build_depend>
    <build_depend>tf2_sensor_msgs</build_depend>
    <build_depend>tf_transformations</build_depend>
    <build_depend>cv_bridge</build_depend>

    <exec_depend>tf2_geometry_msgs</exec_depend>
    <exec_depend>tf2_sensor_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>visualization_msgs</exec_depend>
    <exec_depend>tf</exec_depend>
    <exec_depend>tf_transformations</exec_depend>
    <exec_depend>cv_bridge</exec_depend>
    <exec_depend>ackermann_msgs</exec_depend>
    <exec_depend>nav2_map_server</exec_depend>
    <exec_depend>nav2_lifecycle_manager</exec_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
